2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Set standard
	  values.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* options/KeyBindingSchemeMonoDevelop2.xml: Set the help tree
	  key to alt+shift+f1. ctrl+f1 conflicts with the tooltip
	  popup key.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditTemplateDialog.cs:
	  Changed edit template dialog.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs:
	* MonoDevelop.Ide.CodeTemplates/EditTemplateDialog.cs:
	* MonoDevelop.Ide.CodeTemplates/EditVariablesDialog.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateVariable.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditTemplateDialog.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditVariablesDialog.cs:
	  Worked on code template edit dialog.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateVariable.cs:
	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Templates can now specify a set of values.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/IWorkbenchWindow.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.Gui.Content/ITextEditorResolver.cs:
	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCompletionData.cs:
	  Implemented template function callbacks.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCompletionData.cs: